# Automatic-Verification

./: .gitignore  README.md
Evaluation/: ExerciseBarrier.dfy
Exam/: Exercise1.dfy  Exercise2.dfy
OldExam/: exercise01.dfy  exercise02.dfy
Session1/: ExercisePredicates.dfy  ExercisePredicates2.dfy  ExerciseSpecifications.dfy
Session10/: ExerciseImprovedQuickSort.dfy
Session11/: ListsAssignment.dfy
Session12/: MergeSortAssignment.dfy
Session13/: BinarySearchTreesAssignment.dfy  SkewHeapsAssignment.dfy
Session14/: AVLAssignment.dfy
Session15/: ListClassAssignment.dfy
Session16/: HeapAssignment.dfy  WilliamsHeapAssignment.dfy
Session17/: ExercisePalindrome.dfy  ExerciseReplace.dfy  List.dfy  Queue.dfy  Stack.dfy  Utils.dfy
Session18/: .gitignore  ListsAssignment.cabal  ListsAssignment.hs  Session18.cabal  stack.yaml
Session19/: .gitignore  BooleanMeasuresAssignment.hs  Session19.cabal  TreesAssignment.hs  stack.yaml
Session2/: ExerciseExp.dfy  ExerciseFactorial.dfy  ExerciseFibonacci.dfy  ExercisePositive.dfy  ExerciseSquareRoot.dfy
Session20/: .gitignore  NumericMeasuresAssignment.hs  Session20.cabal  stack.yaml
Session21/: .gitignore  MeasureSetsAssignment.hs  Session21.cabal  stack.yaml
Session3/: ExerciseFactorial.dfy  ExerciseMaximum.dfy
Session4/: ExerciseAllEqual.dfy  ExerciseContained.dfy  ExerciseFirstNegative.dfy  ExerciseFirstZero.dfy
Session5/: ExerciseSumElems.dfy  ExerciseSumElems2.dfy
Session6/: ExerciseCountEven.dfy  ExerciseCountMin.dfy  ExercisePeekSum.dfy  ExerciseSameEven.dfy
Session7/: ExerciseBinarySearch.dfy  (+4 more)
(+4 files in other folders)
