cabal-version: 1.12
name: Session19
version: 0.1
build-type: Simple

library
    default-language: Haskell2010
    hs-source-dirs: .
    ghc-options: -fplugin=LiquidHaskell
    build-depends:
        liquid-base,
        liquid-ghc-prim,
        liquid-prelude,
        liquidhaskell
    exposed-modules:
        ListsAssignment
